--- a/src/index.css
+++ b/src/index.css
@@ -3,227 +3,47 @@
 @tailwind utilities;
 
 :root {
-  --bg-color: #121111;
-  --test-color: #1c1c1c;
+  --primary-color: #0a192f;
+  --secondary-color: #FB8B24;
 }
 
-* {
-  /* font-family: "Permanent Marker", cursive; */
-  font-family: "Madimi One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.dark body {
+  background-color: var(--primary-color);
 }
 
-body {
-  background-color: var(--bg-color);
-  overflow-x: hidden;
-}
-
-/* Start Loading */
-.loading {
-  width: 0%;
-  animation: myloadingani 1s forwards cubic-bezier(0, 0, 0, 0);
-}
-
-@keyframes myloadingani {
-  0% {
-    width: 0%;
-  }
-
-  100% {
-    width: 100%;
-  }
-}
-
-
-/* End Loading */
-
-/* Start Navbar */
-.mobileNav {
-  transform: translateX(100%);
-  animation-name: myanimobilenav;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes myanimobilenav {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 0.9;
-  }
-}
-/* End Navbar */
-
-/* Start Home */
-.typeWriter {
-  animation: typing 2s steps(19), cursor 0.4s step-end infinite alternate;
-}
-
-@keyframes cursor {
-  50% {
-    border-color: transparent;
-  }
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-}
-/* End Home */
-
-.projectTitle {
-  font-family: "Zen Dots", sans-serif;
-  box-shadow: 6px 6px 0 0 #14e956;
-}
-
-.custom-img-container {
-  border-radius: 57% 34% 55% 25% / 50% 32% 42% 38%;
-}
-
-.myPosition {
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-delay: 2s;
-}
-
-.downloadBtn {
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-delay: 3s;
-}
-
-.selfIntroText {
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-delay: 4s;
-}
-
-.socialLinks {
-  opacity: 0;
-  animation-fill-mode: forwards;
-  animation-delay: 5s;
-}
-
-/* start project */
-.projectImgLeft {
-  border-radius: 15px;
-  box-shadow: 0 60px 123px -25px hsla(225, 2%, 62%, 0.42),
-    0 35px 75px -35px hsla(225, 2%, 62%, 0.08);
-  filter: blur(0);
+/* start home section */
+.content-blk {
+  background-image: url("./assets/background/bg.png");
+  background-position: 100% 50px;
+  background-repeat: no-repeat;
+  background-size: 50% auto;
   opacity: 1;
-  transform: perspective(800px) rotateY(25deg) scale(0.8) rotateX(10deg);
-  transition: all 0.6s ease;
 }
 
-.projectImgRight {
-  border-radius: 15px;
-  box-shadow: 0 60px 123px -25px hsla(225, 2%, 62%, 0.42),
-    0 35px 75px -35px hsla(225, 2%, 62%, 0.08);
-  filter: blur(0);
-  opacity: 1;
-  transform: perspective(800px) rotateY(-25deg) scale(0.8) rotateX(10deg);
-  transition: all 0.6s ease;
+.profile-card .img-container {
+  position: relative;
+  height: 250px;
 }
 
-.projectImgLeft:hover {
-  transform: perspective(600px) rotateY(-15deg) scale(0.8) rotateX(10deg);
+.profile-card .img-container::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 8px;
+  left: -8px;
+  border: 4px solid #FB8B24;
 }
 
-.projectImgRight:hover {
-  transform: perspective(600px) rotateY(15deg) scale(0.8) rotateX(10deg);
+.profile-card .img-container::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("./assets/profile/profile.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-/* end project */
-
-/* start scroll animation */
-.scrollAnimation {
-  animation-name: myaniscroll;
-  animation-duration: 3s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes myaniscroll {
-  0% {
-    transform: translateX(200px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 1;
-  }
-}
-/* end scroll animation */
-
-/* start left animation */
-.fromlefts {
-  animation-name: myanifromleft;
-  animation-duration: 3s;
-}
-
-@keyframes myanifromleft {
-  0% {
-    transform: translateX(-120px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 1;
-  }
-}
-/* end left animation */
-
-/* start right animation */
-.fromrights {
-  animation-name: myaniright;
-  animation-duration: 3s;
-}
-
-@keyframes myaniright {
-  0% {
-    transform: translate(30px);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-/* end right animation */
-
-/* start shake animation */
-.shake {
-  animation-name: myshakeani;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-}
-
-@keyframes myshakeani {
-  0% {
-    transform: rotate(-20deg);
-  }
-
-  25% {
-    transform: rotate(20deg);
-  }
-
-  50% {
-    transform: rotate(-20deg);
-  }
-
-  75% {
-    transform: rotate(20deg);
-  }
-
-  100% {
-    transform: rotate(0deg);
-  }
-}
-/* end shake animation */
