--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   --secondary-color: #FB8B24;
 }
 
+body {
+  overflow-x: hidden;
+  background-color: white ;
+}
+
 .dark body {
   background-color: var(--primary-color);
 }
