change profile picture

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url("./assets/profile/profile.jpg");
+  background-image: url("./assets/profile/profile.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
